app/globals.css
/**
 * Copyright (c) 2026 Genshiken Festival, Contributors, Artists and Volunteers.
 * Copyright (c) 2026 Ontario Anime Society.
 * 
 * All rights reserved.
 */

@import "tailwindcss";
@import "bootstrap-icons";

:root {
  --background-base: #fff;
  --background-brand: hsl(255, 40%, 98%);
  --foreground: #171717;
}

@theme {
  --breakpoint-xs: 30rem;
  /* --color-brand-white: #f9f9f9; */
  --color-brand-white: hsl(255, 40%, 98%);
  --color-brand-purple: #8a7cc8;
  --font-brand: "Fredoka", "Inter", Helvetica, sans-serif;
}

body {
  background: var(--background-base);
  color: var(--foreground);
  font-family: "Inter", Helvetica, sans-serif;
}

